@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.controller {
        class AppController {
            {static} - logger : Logger
            + getAll()
            + byId()
            + getAppById()
            + save()
            + update()
            + deleteById()
            + deleteUsingBody()
            + deleteUser()
            + addUser()
            + getUsers()
            + exportCSV()
            + importUsers()
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.controller {
        class FileController {
            {static} - logger : Logger
            + uploadFile()
            + uploadMultipleFiles()
            + downloadFile()
        }
      }
    }
  }
  

  package  {
    package com.example.applicationsmanagement {
      package com.example.applicationsmanagement.controller {
        class UserController {
            + getAll()
            + byId()
            + userById()
            + save()
            + delete()
            + deleteUsingBody()
            + deleteUsingBody()
            + addApp()
            + getApps()
            + update()
            + exportCSV()
            + importUsers()
        }
      }
    }
  }
  

  AppController o-- AppService : service
  FileController o-- FileStorageService : fileStorageService
  UserController o-- UserService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
